# PopWeight

./: .cursorrules  .gitignore  .pre-commit-config.yaml  README.md  generate_data.py  import_test.py  import_train.py  main.py  preprocess_test.py  preprocess_train.py  pyproject.toml  requirements.txt  run_diagnostics.py  split_data.py
analysis/: README.md  __init__.py  correlation.py  insights.py  models.py  trend_detection.py  validation.py  visualizations.py
commands/: __init__.py  import_excel.py  import_test.py  import_train.py  preprocess_test.py  preprocess_train.py
outputs/: training_results.csv
utils/: README.md  __init__.py  data_loader.py  data_loading.py  database.py  model_storage.py  preprocessing.py
workflows/: README.md  __init__.py  correlation.py  data_generation.py  data_preparation.py  diagnostics.py  training.py  validation.py
