[project.scripts]
import-excel = "commands.import_excel:import_excel_command"
import-train = "commands.import_train:import_train_command"
import-test = "commands.import_test:import_test_command"

[tool.ruff]
# Enable Ruff linter and formatter
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Enable additional rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
# Configure isort-style import sorting
known-first-party = ["utils"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending
line-ending = "auto"

